# ChangeLog for dev-python/asciitable
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/asciitable/ChangeLog,v 1.4 2010/09/29 21:17:21 arfrever Exp $

  29 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  asciitable-0.3.1.ebuild:
  Disable tests with Python 3.

*asciitable-0.3.1 (29 Sep 2010)

  29 Sep 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +asciitable-0.3.1.ebuild:
  Version bump

  10 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  asciitable-0.2.6.ebuild:
  Simplify dependencies. Set PYTHON_MODNAME.

*asciitable-0.2.6 (02 Sep 2010)

  02 Sep 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +asciitable-0.2.6.ebuild, +metadata.xml:
  Version bump. Moved to the main Gentoo tree

*asciitable-0.2.5 (15 Jul 2010)

  15 Jul 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +asciitable-0.2.5.ebuild, +metadata.xml:
  Initial import
