@@ -1,6 +1,16 @@
-DIST asciitable-0.2.6.tar.gz 78260 RMD160 6bf5eb9918d3d4aefee69d61262333cdae98946d SHA1 6e0bd77a0f7a4c26e4231890849275586a62b0b0 SHA256 f36d9160b0134d967f6c62cc3e16cc84d4639241cc904dc1f4d8df6bc977dda2
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST asciitable-0.3.1.tar.gz 84725 RMD160 44972083ca1aa9a8205a1c5a35c84eb468b608d8 SHA1 cedbf0ef861c35d8ef03b74e244f42e31acba820 SHA256 53abd969d8d5cea812b302d05d81d66e7e35633d6f48eec617bdc30165bdcff8
-EBUILD asciitable-0.2.6.ebuild 640 RMD160 53a22ce0a8d4db4141ecc1d60a83da50d202ae40 SHA1 67ff9b29f7a8a001e35b9e98cf930d6e6e0dc3f5 SHA256 b87087d8a894a5f88201c57f4ed16b1ceacce5d399ebed399cd6ba34a0d7ebaf
+DIST asciitable-0.4.0.tar.gz 88286 RMD160 dc7a63f937579e293fcd0202932ab7f50f7dfe16 SHA1 ecb71e1bdfa8e7802a1d9ba25e4ae7dd7c370414 SHA256 2bed92928ceb3e0964996222aca119833498001aeb568f2df0ade997035cd209
 EBUILD asciitable-0.3.1.ebuild 751 RMD160 f155646edc626e50e4d437be4590b68f7788db41 SHA1 c23c24128e375b0300a1eb381ccbd9b5456568c7 SHA256 d433edb24620a9cee1f90194dcb0ceb572b03f34d8c8b2f8afa645412d861b7b
-MISC ChangeLog 954 RMD160 6e1793e51049e1ea437f69ee49847ed15766c43e SHA1 0f79be88bed6232d065c6dd4d3b587524c8fb6a6 SHA256 f0498560e8d86b6cbe2626289e50a571e9aea073b17b0c368781bad65ff8ddcb
+EBUILD asciitable-0.4.0.ebuild 751 RMD160 b86a575cd86c16d4aca8c197ae465c773bb2c695 SHA1 03be488631971c89c10bf955018e73ee3faa0be1 SHA256 ce2e47a1dd8ad21dd060e9cb4d6be698f3ce5527bb31c22b23de2805ce2032d3
+MISC ChangeLog 1112 RMD160 db29842e1821002de28257f27beb98689558686a SHA1 2b708ddec5fd1d9b05e4256a25b3dc9a1b3d7e3c SHA256 fab4397a948eb0d8e80b5a336efe6d3f5e745e2dfca73a82062b948e3b382eb0
 MISC metadata.xml 347 RMD160 e36abce006d82d0325319c08d527a0967d734c4b SHA1 0a4595023fae4208f765520851eba71f5a39b3de SHA256 54e31014bb469bde9177b175f9d1232dec0b97dbd2d30c7dc0240539f3154182
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAkz672wACgkQ1ycZbhPLE2AL7QCeM91PsfxnJV0MffUTQjoBIcVN
+/UkAoJ0dRCH85ZXRaHrnFEq4IN8PC5TA
+=m153
+-----END PGP SIGNATURE-----
