@@ -1,12 +1,9 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/asciitable/asciitable-0.2.6.ebuild,v 1.2 2010/09/10 21:36:20 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/asciitable/asciitable-0.4.0.ebuild,v 1.1 2010/12/05 01:48:18 bicatali Exp $
 
 EAPI="3"
-PYTHON_DEPEND="2"
 SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.*"
-DISTUTILS_SRC_TEST="nosetests"
 
 inherit distutils
 
@@ -17,9 +14,18 @@ SRC_URI="${HOMEPAGE}/downloads/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="test"
 
-DEPEND="dev-python/numpy"
-RDEPEND="${DEPEND}"
+RDEPEND="dev-python/numpy"
+DEPEND="${RDEPEND}
+	test? ( dev-python/nose )"
 
 PYTHON_MODNAME="asciitable.py"
+
+src_test() {
+	testing() {
+		[[ "${PYTHON_ABI}" == 3.* ]] && return
+		PYTHONPATH="build-${PYTHON_ABI}/lib" nosetests
+	}
+	python_execute_function testing
+}
