@@ -1,22 +1,0 @@
-dev-python/numpy >=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
-dev-python/numpy >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-http://cxc.harvard.edu/contrib/asciitable//downloads/asciitable-0.2.6.tar.gz
-
-http://cxc.harvard.edu/contrib/asciitable/
-GPL-2
-An extensible ASCII table reader
-~amd64 ~x86
-distutils multilib python toolchain-funcs
-test
-
-
-
-3
-
-compile install postinst postrm prepare test
-
-
-
-
-
