@@ -1,0 +1,22 @@
+dev-python/numpy test? ( dev-python/nose ) >=app-admin/eselect-python-20091230 dev-lang/python
+dev-python/numpy >=app-admin/eselect-python-20091230 dev-lang/python
+0
+http://cxc.harvard.edu/contrib/asciitable//downloads/asciitable-0.4.0.tar.gz
+
+http://cxc.harvard.edu/contrib/asciitable/
+GPL-2
+An extensible ASCII table reader
+~amd64 ~x86
+distutils multilib python toolchain-funcs
+test
+
+
+
+3
+
+compile install postinst postrm prepare test
+
+
+
+
+
