@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/asciitable
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/asciitable/ChangeLog,v 1.4 2010/09/29 21:17:21 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/asciitable/ChangeLog,v 1.5 2010/12/05 01:48:18 bicatali Exp $
+
+*asciitable-0.4.0 (05 Dec 2010)
+
+  05 Dec 2010; Sébastien Fabbro <bicatali@gentoo.org>
+  -asciitable-0.2.6.ebuild, +asciitable-0.4.0.ebuild:
+  Version bump
 
   29 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   asciitable-0.3.1.ebuild:
